--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,7 +71,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.multidex:multidex:2.0.1"
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+//    使用recyclerview控件
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     //demo use only end
 
     testImplementation 'junit:junit:4.12'
